Completed: - Navigation Wrapping Bug
TODO:
- Mobile Side Navigation
- Interactivity
- Paragraphs

--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,15 @@ header{
 }
 
 nav{
-    width: 100%;
     height: 10vh;
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
 }
 
 nav a{
+    overflow: hidden;
+    background-color: #afc6de;
     height: 100%;
     text-decoration: none;
     display: flex;
